--- a/README
+++ b/README
@@ -26,7 +26,9 @@ Build and execution instructions:
 
           In the directory php-java-bridge_1.x.y type:
 
-          php --version  # must be PHP 4.3.2 or above! For PHP5 see below.
+
+          apachectl -version # Apache 2.x or above! For Apache 1.x see below.
+          php --version      # PHP 4.3.2 or above! For PHP5 see below.
           phpize && ./configure --with-java=/opt/IBMJava2-141/ && make
 
           su <password>
@@ -72,11 +74,11 @@ Build and execution instructions:
           java.java      = <system dependent path to the java binary>
           java.socketname= <hard-coded socketname for debugging>
 
-          If you change the above values, please fist look at the output
+          If you change the above values, please first look at the output
           of phpinfo() so see the original values.
 
-          For debugging you can also start a external java application 
-          with the following command:
+          For debugging or if you use Apache 1.3 you can also start an
+          external java application with the following command:
 
             JAVA_HOME=<java.home> <java.home>/bin/java \
                                         -Djava.library.path=<java.libpath>
@@ -206,6 +208,18 @@ Build and execution instructions:
 
   Until an official PHP5/Java binding based on JSR-223 doesn't
   exist, please use PHP 4 with the PHP/Java Bridge.
+------------------------------------
+  Apache 1.3 support
+
+  If you use Apache 1.3 you must start an external java application
+  using the command described above.
+  Starting the bridge as a child of the httpd process is not supported.
+
+  Apache 1.3 does not treat childs very well. During pool cleanup
+  it may elect to kill any child, wether or not that child has been 
+  forked by the master process or not. So if we fork our java process 
+  within the httpd process this java process will be in danger 
+  whenever apache has to kill some of its childs.
 ------------------------------------
 
         
