--- a/README
+++ b/README
@@ -50,8 +50,18 @@ Build and execution instructions:
 
           echo "<?php phpinfo()?>" | php | fgrep "java status"
 
-          If you want to test the extension in the Web-Server, you must
-          restart the Web-Server after you have installed the extension.
+          If you want to test the extension in the web-server, you must
+          restart the web-server after you have installed the extension.
+          When the config option java.socketname is not set, the web-server
+          will try to fork()/exec() the Java VM as a sub-process of the
+          web-server.
+          Please note that starting the VM this way is only supported
+          with the following software configurations:
+            * IBM JVM, PHP/Java Bridge version != 1.0.3, Apache 2.x, Unix
+            * SUN JVM, PHP/Java Bridge version any, Apache 2.x, Unix
+          If you want to use other JVM's or Apache 1.3 or you want
+          to use the bridge on Windows, you must start the JVM yourself
+          and set the java.socketname option.
 
           This module has been tested on a Mandrake Linux System (Version
           9.2), on RedHat Enterprise 3, RedHat Fedora Core 1 and 2, but 
@@ -77,8 +87,8 @@ Build and execution instructions:
           If you change the above values, please first look at the output
           of phpinfo() so see the original values.
 
-          For debugging or if you use Apache 1.3 you can also start an
-          external java application with the following command:
+          It is recommended to start the java process outside of the
+          http server.  You must start java as follows:
 
             JAVA_HOME=<java.home> <java.home>/bin/java \
                                         -Djava.library.path=<java.libpath>
@@ -104,50 +114,6 @@ Build and execution instructions:
          hard-coding the java.socketname to /tmp/.php_java and
          re-start the apache service.
 
-------------------------------------
-         QUICK INSTALL
-
-           su - -c "service httpd stop"
-           INST=/usr/local
-
-           gunzip < httpd_2.x.y.tar.gz | tar xf -
-           cd httpd_2.x.y
-           ./configure --prefix=$INST
-           make && su -c "make install"
-           cd ..
-
-           bunzip2 < php-4.3.x.tar.bz2 | tar xf -
-           cd php-4.3.x
-           ./configure --prefix=$INST \
-                       --with-mysql \
-                       --without-java \
-                       --with-apxs2=$INST/bin/apxs
-           make && su -c "make install"
-           # now activate php in the httpd.conf
-           su -c "echo 'AddType application/x-httpd-php .php' >>$INST/conf/httpd.conf"
-           cd ..
-
-           bunzip2 < php-java-bridge_1.x.y.tar.bz2 | tar xf -
-           cd php-java-bridge_1.x.y
-           export PATH=$INST/bin:$PATH 
-           export LD_LIBRARY_PATH=$INST/lib:$LD_LIBRARY_PATH
-           phpize
-           ./configure --prefix=$INST \
-                       --with-java=/opt/IBMJava2-141
-           make && su -c "make install"
-           # now activate the bridge in php.ini
-           su -c "touch $INST/lib/php.ini && echo -e 'extension=java.so\n[java]' >>$INST/lib/php.ini"
-           cd ..
-
-           # test
-           su -c "echo '<?php phpinfo() ?>' >$INST/htdocs/phpinfo.php; chmod +xr $INST/htdocs/phpinfo.php; apachectl restart"
-
-           # checking cli
-           echo '<?php phpinfo() ?>' | php | fgrep "java status"
-
-           # checking web
-             wget -olog -O-  http://localhost/phpinfo.php|fgrep "java status"
- 
 ------------------------------------
    Using GNU Java
 
