--- a/README
+++ b/README
@@ -28,7 +28,7 @@ Build and execution instructions:
 
           java -version      # 1.3 or above (1.4.2_02 or IBM Java recommended).
           gcc --version      # 3.2.3 or above.
-          apachectl -version # Apache 2.x or above. For Apache 1.x see below.
+          apachectl -version # Apache 1.3 or above.
           php --version      # PHP 4.3.2 or above. For PHP5 see below.
 
           phpize && ./configure --with-java=/opt/IBMJava2-14
@@ -55,7 +55,7 @@ Build and execution instructions:
 
           echo "<?php phpinfo()?>" | php | fgrep "java"
 
-          If you want to test the extension in the web-server, you must
+          If you want to test the extension in the web-server, you should
           enable the java.socketname option and start the java VM
           before you start the web-server.  The java VM can then be
           started as follows
@@ -173,18 +173,6 @@ Build and execution instructions:
 
   Until an official PHP5/Java binding based on JSR-223 exists,
   please use PHP 4 with the PHP/Java Bridge.
-------------------------------------
-  Apache 1.3 support
-
-  If you use Apache 1.3 you must start an external java application
-  using the command described above.
-  Starting the bridge as a child of the httpd process is not supported.
-
-  Apache 1.3 does not treat childs very well. During pool cleanup
-  it may elect to kill any child, wether or not that child has been 
-  forked by the master process or not. So if we fork our java process 
-  within the httpd process this java process will be in danger 
-  whenever apache has to kill some of its childs.
 ------------------------------------
 
         
