--- a/README
+++ b/README
@@ -1,30 +1,30 @@
 What is the PHP/Java bridge?
+----------------------------
 
-         The PHP/Java bridge allows one to access java based
-         applications running in a java application server running 
-         on the local host.  The PHP/Java bridge communicates with 
-         the application server through local sockets using an 
-         efficient communication protocol.  This means that only one 
-         JVM runs to serve all clients within a multi-process HTTP-Server.  
-         Each client process communicates with a corresponding thread 
-         spawned by the running application server.
+  The PHP/Java bridge allows one to access java based applications
+  running in a java application server running on the local host.  The
+  PHP/Java bridge communicates with the application server through local
+  sockets using an efficient communication protocol.  This means that
+  only one JVM runs to serve all clients within a multi-process
+  HTTP-Server.  Each client process communicates with a corresponding
+  thread spawned by the running application server.
 
-         If the bridge detects that a java application server is not
-         already running, it starts one to serve further requests.
+  If the bridge detects that a java application server is not already
+  running, it starts one to serve further requests.
 
-         There is one example provided: test.php.  You can either invoke
-         the test.php by typing ./test.php or copy the example into the
-         document root of you web-server and invoke the file using the
-         browser.
+  There is one example provided: test.php.  You can either invoke the
+  test.php by typing ./test.php or copy the example into the document
+  root of you web-server and invoke the file using the browser.
 
-         The PHP/Java bridge is meant as a replacement for the ext/java
-         bridge shipped with PHP 4.  It is not possible to run the 
-         build-in bridge and the PHP/Java bridge at the same time.
+  The PHP/Java bridge is meant as a replacement for the ext/java bridge
+  shipped with PHP 4.  It is not possible to run the build-in bridge and
+  the PHP/Java bridge at the same time.
 
 
 Build and execution instructions:
+---------------------------------
 
-          In the directory php-java-bridge_1.x.y type:
+  In the directory php-java-bridge_1.x.y type:
 
           java -version      # 1.3 or above (1.4.2_02 or IBM Java recommended).
           gcc --version      # 3.2.3 or above.
@@ -37,10 +37,21 @@ Build and execution instructions:
           su <password>
           make install
 
-          and then activate the extension by adding the following lines to
-          the php.ini or add a file java.ini to the directory that
-          contains the php module descriptions (usually /etc/php.d/) with
-          the following content:
+   If your administrator allows you to dynamically load extensions you
+   can now test the extension by invoking the test.php with the 
+   command: php ./test.php.
+
+
+------------------------------------
+   Permanently activate the module
+   -------------------------------
+
+  
+  It is recommended to activate the module in the global php ini file.
+
+  To permanently activate the extension add the following lines to the
+  php.ini or add a file java.ini to the directory that contains the php
+  module descriptions (usually /etc/php.d/) with the following content:
 
           extension = java.so
           [java]
@@ -50,15 +61,14 @@ Build and execution instructions:
           # to start a JVM as a separate process.
           #java.socketname=/tmp/.php_java
 
-          After the module is activated, verify that the module is running
-          by typing:
+  After the module is activated, verify that the module is running by
+  typing:
 
           echo "<?php phpinfo()?>" | php | fgrep "java"
 
-          If you want to test the extension in the web-server, you should
-          enable the java.socketname option and start the java VM
-          before you start the web-server.  The java VM can then be
-          started as follows
+  If you want to test the extension in the web-server, you should enable
+  the java.socketname option and start the java VM before you start the
+  web-server.  The java VM can then be started as follows
 
             JAVA_HOME=<java.home> <java.home>/bin/java \
                                         -Djava.library.path=<java.libpath>
@@ -69,7 +79,7 @@ Build and execution instructions:
                                         <loglevel>
                                         <log-file>
 
-          For example in a gnome-terminal type:
+  For example in a gnome-terminal type:
 
             JAVA_HOME=/opt/jdk1.4 $JAVA_HOME/bin/java \
                     -Djava.library.path=/usr/lib/php4 \
@@ -80,29 +90,28 @@ Build and execution instructions:
                      5 \
                      "" | tee /tmp/java.log
 
-          If you are unsure how to start the java process, please look at
-          the output of the above phpinfo() command.  One of the last lines
-          shows the command required to start the JVM.
-          The distribution contains two scripts tested on RedHat Enterprise
-          Linux 3.  They start the JVM based on the information from 
-          phpinfo(). The "php-java-bridge" command starts the JVM and
-          the "php-java-bridge.service" can be used on SysV based init
-          systems to automatically start and stop the bridge as a service.
+  If you are unsure how to start the java process, please look at the
+  output of the above phpinfo() command.  One of the last lines shows
+  the command required to start the JVM.  The distribution contains two
+  scripts tested on RedHat Enterprise Linux 3.  They start the JVM based
+  on the information from phpinfo(). The "php-java-bridge" command
+  starts the JVM and the "php-java-bridge.service" can be used on SysV
+  based init systems to automatically start and stop the bridge as a
+  service.
 
-          This module has been tested on a Mandrake Linux System (Version
-          9.2), on RedHat Enterprise 3, RedHat Fedora Core 1 and 2, but 
-          it should run on all Unix-like operating systems including 
-          Solaris, Mac.   
+  This module has been tested on a Mandrake Linux System (Version 9.2),
+  on RedHat Enterprise 3, RedHat Fedora Core 1 and 2, but it should run
+  on all Unix-like operating systems including Solaris, Mac.
 
-          However, the extension currently does not compile on systems
-          which do not support fork()/exec().  On these systems you must
-          disable the code in bind.c and start the java application server
-          yourself.  Fortunately all modern operating systems -- except
-          Windows -- support fork()/exec()
+  However, the extension currently does not compile on systems which do
+  not support fork()/exec().  On these systems you must disable the code
+  in bind.c and start the java application server yourself.  Fortunately
+  all modern operating systems -- except Windows -- support
+  fork()/exec()
 
 
-          Other configuration options which should have been set up by the
-          configure script but which can be changed later are:
+  Other configuration options which should have been set up by the
+  configure script but which can be changed later are:
 
           java.libpath   = <system dependent path to natcJavaBridge.so>
           java.classpath = <system dependent path to JavaBridge.class>
@@ -110,11 +119,12 @@ Build and execution instructions:
           java.java      = <system dependent path to the java binary>
           java.socketname= <hard-coded socketname to start the VM separately>
 
-          If you change the above values, please first look at the output
-          of phpinfo() so see the original values.
+  If you change the above values, please first look at the output of
+  phpinfo() so see the original values.
 
 ------------------------------------
    Using GNU Java
+   --------------
 
    In case you don't want to ship a JVM or JRE with your product
    you can use GNU gcc to compile the java part and your classes
@@ -156,6 +166,7 @@ Build and execution instructions:
 
 ------------------------------------
   PHP 5 support
+  -------------
 
   The PHP/Java bridge currently does not support the new PHP 5 object 
   system.
@@ -173,6 +184,26 @@ Build and execution instructions:
 
   Until an official PHP5/Java binding based on JSR-223 exists,
   please use PHP 4 with the PHP/Java Bridge.
+
+------------------------------------
+  Dynamic module loading
+  ----------------------
+
+  It is possible to load the bridge dynamically, for example with:
+
+    <?php
+    if (!extension_loaded('java')) {
+      if (!dl("../../tmp/java.so")) {
+        exit(1);
+      }
+    }
+    phpinfo();
+    ?>
+
+  However, this feature is meant for testing, only.  For a production
+  system it is recommended to compile PHP in save mode (which switches
+  off the dl() function) and to activate all modules in the global
+  php ini file.
 ------------------------------------
 
         
